fix left right alignment

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -361,7 +361,6 @@ html, body {
 	border-radius: 10px 0px 0px 10px;
 	position: relative;
 	bottom: 5px;
-	left: 81px;
 	margin-bottom: 30px;
 }
 
@@ -373,7 +372,6 @@ html, body {
 	border-radius: 10px 0px 0px 10px;
 	position: relative;
 	bottom: 29px;
-	left: 82px;
 }
 
 .social {
